--- a/CSS/contakt.css
+++ b/CSS/contakt.css
@@ -42,7 +42,7 @@ body{
 }
 .sectionone{
     min-height: 100vh;
-    background-image: url(../ASSETS/IMG/background/contackback1.jpg);
+    background-image: url(../ASSETS/IMG/background/contacktback.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
 }
