--- a/CSS/model.css
+++ b/CSS/model.css
@@ -45,11 +45,19 @@ body{
     text-align: center;
     padding-bottom: 25px;
 }
+.model-img{
+    max-width: 280px;
+    max-height: 200px;
+    background-repeat: no-repeat;
+    min-height: 200px;
+    min-width: 280px;
+    border-radius: 5px;
+}
 .models-row{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding-bottom: 15px;
+    padding-bottom: 50px;
 }
 .box-models{
     max-width: 280px;
@@ -57,13 +65,6 @@ body{
     flex-direction: column;
     text-align: center;
     align-items: center;
-}
-.model-img{
-    max-width: 280px;
-    max-height: 200px;
-    min-height: 200px;
-    min-width: 280px;
-    border-radius: 3px;
 }
 .model-img:hover{
     transform: scale(1.2);
